<resources>
    <string name="app_name">Easy Life</string>
    <string name="app_slogan">Life is Easier</string>
    <string-array name="theme_options">
        <item>Light</item>
        <item>Dark</item>
        <item>System Default</item>
    </string-array>
    <string-array name="lang_options">
        <item>EN-US</item>
        <item>EN-GB</item>
        <item>PT-PT</item>
    </string-array>
    <string-array name="autoBackups_options">
        <item>Never</item>
        <item>Weekly</item>
        <item>Biweekly</item>
        <item>Monthly</item>
    </string-array>
    <string name="general_Search">Search</string>
    <string name="general_Others">Others</string>
    <string name="general_Delete">Delete</string>
    <string name="general_Edit">Edit</string>
    <string name="general_Example">Example</string>
    <string name="general_plusSign">+</string>
    <string name="general_DontSave">Don\'t Save</string>
    <string name="general_Save">Save</string>
    <string name="general_change">Change</string>
    <string name="general_confirm">Confirm</string>
    <string name="general_continue">Continue</string>
    <string name="general_cancel">Cancel</string>
    <string name="general_next">Next</string>
    <string name="general_previous">Previous</string>
    <string name="general_finish">Finish</string>
    <string name="general_ok">Ok</string>
    <string name="general_yes">Yes</string>
    <string name="general_no">No</string>
    <string name="general_AlertDialog_Question_ExitWithoutSaving_Title">Exit Without Saving</string>
    <string name="general_AlertDialog_Question_ExitWithoutSaving_Text">Do you wish to exit without saving?</string>
    <string name="general_AlertDialog_Question_Saving_Text">Do you wish to save?</string>
    <string name="general_AlertDialog_Question_SaveBeforeLeaving_Title">Save before Leaving</string>
    <string name="general_AlertDialog_Question_SaveBeforeLeaving_Text">Do you wish to save before leaving?</string>
    <string name="splashAc_HowTo_Scan_Home_Title">Scanning a Receipt</string>
    <string name="splashAc_HowTo_Scan_Home_Text">When scanning/photographing a receipt please just photographs the "Total Amount" part.</string>
    <string name="splashAc_HowTo_Scan_Final_Title">Reviewing the Photo</string>
    <string name="splashAc_HowTo_Scan_Final_Text">Your Photo should look something like this, it doesn\'t need to be exactly like this but it needs to show the Total.</string>
    <string name="splashAc_HowTo_Scan_Final_TextViewExample_Text">------------------------------\nTotal:\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ Eur 15,80\n------------------------------</string>
    <string name="register_dialog_account_text">Create your Account</string>
    <string name="register_dialog_account_email_prompt">Email</string>
    <string name="register_dialog_account_email_code_prompt">Code</string>
    <string name="register_dialog_account_email_code_wrong">Something is wrong</string>
    <string name="register_dialog_account_Toast_NotAvaliable_Network">Please connect to Wi-Fi to processed.</string>
    <string name="register_dialog_AlertDialog_Question_Title">Load Backup</string>
    <string name="register_dialog_AlertDialog_Question_Text">Looks like your account is already registered do you want to load a backup?</string>
    <string name="register_dialog_AlertDialog_BackupLoad_NoItemsToDisplay_Text">Hmm… Looks like you don\'t have any Backups to display.</string>
    <string name="register_dialog_textView_ResendEmail_Text">Resend Email</string>
    <string name="register_dialog_password_prompt_password_1">PIN Code</string>
    <string name="register_dialog_password_prompt_password_2">Confirm the PIN Code</string>
    <string name="register_dialog_password_action_register">Set Up a PIN Code</string>
    <string name="register_dialog_password_invalid_password_no_equal">Your PIN Codes don\'t match</string>
    <string name="register_dialog_password_invalid_password_to_short">PIN Code must have 4 characters</string>
    <string name="register_dialog_biometric_action_register">Do you want to activate biometric login?</string>
    <string name="register_dialog_faceId_action_register">Do you want to activate Face ID login?</string>
    <string name="authFragment_wrongPinCode_Toast_Text">The Pin Code inserted is incorrect!!</string>
    <string name="alertDialog_FragmentRestartSession_FaceID_Title">Face ID</string>
    <string name="alertDialog_RestartSession_BiometricID_Title">Biometric ID</string>
    <string name="alertDialog_RestartSession_BiometricID_Subtitle">Biometric ID</string>
    <string name="alertDialog_Notify_EmailSend_Title">Email Sent</string>
    <string name="alertDialog_Notify_EmailSend_Description">An email has been sent to the provided email for verification. Please insert the code provided in the email at the respective spot.</string>
    <string name="alertDialog_LongPressMainViewObjects_TextView_Styles_Text">Widget Style</string>
    <string name="alertDialog_LongPressMainViewObjects_TextView_SpendingsAccounts_Text">Connected Spending Account</string>
    <string name="alertDialog_LongPressMainViewObjects_TextView_SpendingsSubAccounts_Text">Connected Spending SubAccount</string>
    <string name="alertDialog_LongPressMainViewObjects_spinner_WidgetStyle_ItemText">Style</string>
    <string name="alertDialog_LongPressMainViewObjects_spinner_WidgetStyle_StarterText">Select a Style</string>
    <string name="alertDialog_LongPressMainViewObjects_spinner_SpendingsAccounts_StarterText">Select an Account</string>
    <string name="alertDialog_LongPressMainViewObjects_spinner_SpendingsSubAccounts_StarterText">Select a SubAccount</string>
    <string name="alertDialog_LongPressMainViewObjects_Toast_SelectStyle">Please select a Style</string>
    <string name="alertDialog_LongPressMainViewObjects_Toast_SelectAccount">Please select an Account</string>
    <string name="alertDialog_LongPressMainViewObjects_Toast_SelectSubAccount">Please select a SubAccount</string>
    <string name="mainAc_bottomNavigationView_Home">Home</string>
    <string name="mainAc_bottomNavigationView_Add">Add</string>
    <string name="mainAc_bottomNavigationView_Graffics">Spends</string>
    <string name="mainAc_sideBar_Share">Share</string>
    <string name="mainAc_sideBar_RateUs">Rate Us</string>
    <string name="mainAc_sideBar_Backups">Backups</string>
    <string name="mainAc_sideBar_Configs">Settings</string>
    <string name="mainAc_SideBar_Credits">Credits</string>
    <string name="mainAc_Monthly_ResumeEmail_Text_1">How much you spent this month</string>
    <string name="mainAc_Monthly_ResumeEmail_Text_2">What account was spent more</string>
    <string name="mainAc_Monthly_ResumeEmail_Text_3">What account was spent less</string>
    <string name="mainAc_Monthly_ResumeEmail_Text_4">Spends Resume</string>
    <string name="mainAc_FragMainView_Page_Title_Text">Statistics</string>
    <string name="mainAc_FragMainView_Example_ChartName_Text">Your Chart Name</string>
    <string name="mainAc_FragMainView_Example_Percentage1_Text">Percentage 1</string>
    <string name="mainAc_FragMainView_Example_Percentage2_Text">Percentage 2</string>
    <string name="mainAc_FragMainView_Example_Percentage3_Text">Percentage 3</string>
    <string name="mainAc_FragMainView_Example_Percentage4_Text">Percentage 4</string>
    <string name="mainAc_FragMainView_Example_Percentage5_Text">Percentage 5</string>
    <string name="mainAc_FragMainView_Example_Percentage6_Text">Percentage 6</string>
    <string name="mainAc_FragMainView_Example_Percentage7_Text">Percentage 7</string>
    <string name="mainAc_FragMainView_Example_Percentage8_Text">Percentage 8</string>
    <string name="mainAc_FragMainView_HowTo_BindingAccounts_Title">Binding Accounts</string>
    <string name="mainAc_FragMainView_HowTo_BindingAccounts_Home_Text">To bind a account to your pie chart you just need to do a long press in it. And a pop up will appear!!</string>
    <string name="mainAc_FragMainView_HowTo_BindingAccounts_PopUpForm_Text">Now you just need to select the desired account to bind!!</string>
    <string name="mainAc_FragMainViewEditLayout_Toast_noSpace_Text">You dont have space to put this object in</string>
    <string name="mainAc_FragMainViewEditLayout_AlertDialog_Delete_Title">Remove Widget</string>
    <string name="mainAc_FragMainViewEditLayout_AlertDialog_Delete_Description">Do you wish to remove this widget?</string>
    <string name="mainAc_FragMainViewEditLayout_AlertDialog_Save_Description">Do you wish to save this widget layout?</string>
    <string name="mainAc_FragMainViewEditLayoutHowTo_Home_Title">Hi!!</string>
    <string name="mainAc_FragMainViewEditLayoutHowTo_Home_Text">This is How To Make Your Own Widget Layout!!</string>
    <string name="mainAc_FragMainViewEditLayoutHowTo_Add_Title">Adding Widgets</string>
    <string name="mainAc_FragMainViewEditLayoutHowTo_Add_Text_1">When adding Widgets you have 3 sizes of Widgets</string>
    <string name="mainAc_FragMainViewEditLayoutHowTo_Add_Text_2">The Small one</string>
    <string name="mainAc_FragMainViewEditLayoutHowTo_Add_Text_3">The Medium one</string>
    <string name="mainAc_FragMainViewEditLayoutHowTo_Add_Text_4">And THE BIG ONE</string>
    <string name="mainAc_FragMainViewEditLayoutHowTo_Add_Text_5">To add your Widgets you just need to click one of the buttons!</string>
    <string name="mainAc_FragMainViewEditLayoutHowTo_DnD_Title">Moving Widgets</string>
    <string name="mainAc_FragMainViewEditLayoutHowTo_DnD_Text_1">After adding your Widgets you can move them around as you like!!</string>
    <string name="mainAc_FragMainViewEditLayoutHowTo_DnD_Text_2">Move it to a place and it will stay there!!</string>
    <string name="mainAc_FragMainViewEditLayoutHowTo_Delete_Title">Removing Widgets</string>
    <string name="mainAc_FragMainViewEditLayoutHowTo_Delete_Text_1">To remove one of your Widgets you just need to do a Double Click in it!! After a Pop-Up will appear to confirm if you want to remove the Widget</string>
    <string name="mainAc_FragMainViewEditLayoutHowTo_Delete_PopUp_Title">Remove</string>
    <string name="mainAc_FragMainViewEditLayoutHowTo_Delete_PopUp_Description">Remove Widget?</string>
    <string name="mainAc_FragMainViewEditLayoutHowTo_Save_Title">Saving Widgets</string>
    <string name="mainAc_FragMainViewEditLayoutHowTo_Save_Text_1">To save your Widgets you just need to click on the check mark button and confirm that you want to save in the Pop-Up</string>
    <string name="mainAc_FragMainViewEditLayoutHowTo_Save_Text_2">Congratulations!! Now you know who to personalize your Widgets!!</string>
    <string name="mainAc_FragMainViewEditLayoutHowTo_Save_PopUp_Title">Save</string>
    <string name="mainAc_FragMainViewEditLayoutHowTo_Save_PopUp_Description">Save Widgets?</string>
    <string name="mainAc_FragOverviewView_Page_Title_Text">Accounts</string>
    <string name="mainAc_FragOverviewView_NoItemsToDisplay_Text">Hmm… Looks like you dont have any Spendings Accounts. You can create them by pressing the Plus Button Above!!</string>
    <string name="mainAc_FragOverviewView_Example_Percentage1_Text">Percentage 1</string>
    <string name="mainAc_FragOverviewView_Example_Percentage2_Text">Percentage 2</string>
    <string name="mainAc_FragOverviewView_Example_Percentage3_Text">Percentage 3</string>
    <string name="mainAc_FragOverviewView_Example_Percentage4_Text">Percentage 4</string>
    <string name="mainAc_FragOverviewView_HowTo_Add_Title">Adding Accounts</string>
    <string name="mainAc_FragOverviewView_HowTo_Add_Text">To add a account you just need to click the plus button in the top!!</string>
    <string name="tutorialFrag_skip">Skip</string>
    <string name="tutorialFrag_Welcome_Title">Hello!!</string>
    <string name="tutorialFrag_Welcome_Text">Welcome to Easy Life</string>
</resources>