<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.register.RegisterDialogAccountFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_title_RegisterAccountDialogFrag"
            android:gravity="center_horizontal"
            android:textSize="32sp"
            android:fontFamily="@font/coiny_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/textView_appSlogan_RegisterAccountDialogFrag"
            android:layout_below="@+id/textView_title_RegisterAccountDialogFrag"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_slogan"/>

        <TextView
            android:id="@+id/textView_title2_RegisterAccountDialogFrag"
            android:layout_below="@+id/textView_appSlogan_RegisterAccountDialogFrag"
            android:gravity="center_horizontal"
            android:layout_marginTop="15sp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_dialog_account_text"/>

        <EditText
            android:id="@+id/editText_Email_RegisterAccountDialogFrag"
            android:layout_below="@+id/textView_title2_RegisterAccountDialogFrag"
            android:gravity="center_horizontal"
            android:layout_marginTop="15sp"
            android:textSize="18sp"
            android:padding="5sp"
            android:maxLines="1"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:hint="@string/register_dialog_account_email_prompt"
            android:background="@drawable/round_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@null"/>

        <EditText
            android:id="@+id/editText_EmailCode_RegisterAccountDialogFrag"
            android:layout_below="@+id/editText_Email_RegisterAccountDialogFrag"
            android:gravity="center_horizontal"
            android:layout_marginTop="15sp"
            android:textSize="18sp"
            android:padding="5sp"
            android:maxLines="1"
            android:inputType="number"
            android:visibility="gone"
            android:hint="@string/register_dialog_account_email_code_prompt"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:background="@drawable/round_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@null"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/butContinue_RegisterAccountDialogFrag"
            android:layout_below="@+id/editText_EmailCode_RegisterAccountDialogFrag"
            android:layout_marginTop="15sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="15sp"
            android:textSize="16sp"
            android:text="@string/general_continue"
            android:textColor="?attr/textAppearanceBodySmall"
            android:background="@drawable/round_button_principal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>


</FrameLayout>