<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.tutorial.TutorialWelcomeFragment">

    <!--    -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_margin="15sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="?attr/textAppearanceBodyLarge"
        android:text="@string/tutorialFrag_skip"/>


    <!--    -->

    <ImageView
        android:id="@+id/imageView_waving_FragTutotialWelcome"
        android:layout_marginBottom="80sp"
        android:layout_marginRight="10sp"
        android:layout_gravity="center"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:src="@drawable/welcome_icon"/>
    <TextView
        android:layout_gravity="center"
        android:textSize="40sp"
        android:text="@string/tutorialFrag_Welcome_Title"
        android:fontFamily="@font/coiny_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="40sp"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:text="@string/tutorialFrag_Welcome_Text"
        android:fontFamily="@font/dosis_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</FrameLayout>