<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.register.RegisterDialogFaceIDFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_title_RegisterFaceIDFrag"
            android:gravity="center_horizontal"
            android:textSize="32sp"
            android:fontFamily="@font/coiny_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/textView_appSlogan_RegisterFaceIDFrag"
            android:layout_below="@+id/textView_title_RegisterFaceIDFrag"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_slogan"/>

        <TextView
            android:id="@+id/textView_title2_RegisterFaceIDFrag"
            android:layout_below="@+id/textView_appSlogan_RegisterFaceIDFrag"
            android:gravity="center_horizontal"
            android:layout_marginTop="15sp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_dialog_faceId_action_register"/>

        <FrameLayout
            android:id="@+id/frameLayout_imageView_1_RegisterFaceIDFrag"
            android:layout_below="@+id/textView_title2_RegisterFaceIDFrag"
            android:layout_marginTop="25sp"
            android:layout_marginBottom="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/biometric_faceid" />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/butConfirm_RegisterFaceIDFrag"
            android:layout_below="@+id/frameLayout_imageView_1_RegisterFaceIDFrag"
            android:layout_marginTop="15sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="5sp"
            android:textSize="16sp"
            android:textColor="?attr/textAppearanceBodySmall"
            android:text="@string/general_continue"
            android:background="@drawable/round_button_principal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/butCancel_RegisterFaceIDFrag"
            android:layout_below="@+id/butConfirm_RegisterFaceIDFrag"
            android:layout_marginTop="5sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="15sp"
            style="@style/SecondaryButton"
            android:text="@string/general_cancel" />

    </RelativeLayout>

</FrameLayout>