<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.register.RegisterPasswordDialogFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_title_RegisterPasswordDialogFrag"
            android:gravity="center_horizontal"
            android:textSize="@dimen/_25sdp"
            android:textColor="?attr/textAppearanceBodySmall"
            android:fontFamily="@font/coiny_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/textView_appSlogan_RegisterPasswordDialogFrag"
            android:layout_below="@+id/textView_title_RegisterPasswordDialogFrag"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:textColor="?attr/textAppearanceBodySmall"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:text="@string/app_slogan"/>

        <TextView
            android:id="@+id/textView_title2_RegisterPasswordDialogFrag"
            android:layout_below="@+id/textView_appSlogan_RegisterPasswordDialogFrag"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_11sdp"
            android:textSize="@dimen/_14sdp"
            android:textColor="?attr/textAppearanceBodySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_dialog_password_action_register"/>

        <EditText
            android:id="@+id/editText_Password_RegisterPasswordDialogFrag"
            android:layout_below="@+id/textView_title2_RegisterPasswordDialogFrag"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_11sdp"
            android:textSize="@dimen/_14sdp"
            android:textColor="?attr/textAppearanceBodyLarge"
            android:padding="@dimen/_4sdp"
            android:maxLines="1"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:hint="@string/register_dialog_password_prompt_password_1"
            android:background="@drawable/round_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@null"/>

        <EditText
            android:id="@+id/editText_ConfirmPassword_RegisterPasswordDialogFrag"
            android:layout_below="@+id/editText_Password_RegisterPasswordDialogFrag"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_11sdp"
            android:textSize="@dimen/_14sdp"
            android:textColor="?attr/textAppearanceBodyLarge"
            android:padding="@dimen/_4sdp"
            android:maxLines="1"
            android:inputType="numberPassword"
            android:hint="@string/register_dialog_password_prompt_password_2"
            android:maxLength="4"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:background="@drawable/round_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@null"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/butContinue_RegisterPasswordFrag"
            android:layout_below="@+id/editText_ConfirmPassword_RegisterPasswordDialogFrag"
            android:layout_marginTop="@dimen/_11sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_11sdp"
            android:textSize="@dimen/_12sdp"
            android:text="@string/general_continue"
            android:textColor="?attr/textAppearanceBodySmall"
            android:background="@drawable/round_button_principal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>
</FrameLayout>