<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.register.RegisterDialogBiometricFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_title_RegisterPasswordDialogFrag"
            android:gravity="center_horizontal"
            android:textSize="@dimen/_25sdp"
            android:fontFamily="@font/coiny_regular"
            android:layout_width="match_parent"
            android:textColor="?attr/textAppearanceBodySmall"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/textView_appSlogan_RegisterPasswordDialogFrag"
            android:layout_below="@+id/textView_title_RegisterPasswordDialogFrag"
            android:gravity="center_horizontal"
            android:textColor="?attr/textAppearanceBodySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:text="@string/app_slogan"/>

        <TextView
            android:id="@+id/textView_title2_RegisterPasswordDialogFrag"
            android:layout_below="@+id/textView_appSlogan_RegisterPasswordDialogFrag"
            android:gravity="center_horizontal"
            android:textColor="?attr/textAppearanceBodySmall"
            android:layout_marginTop="@dimen/_11sdp"
            android:textSize="@dimen/_14sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_dialog_biometric_action_register"/>

        <FrameLayout
            android:id="@+id/frameLayout_imageView_1_RegisterBiometricFrag"
            android:layout_below="@+id/textView_title2_RegisterPasswordDialogFrag"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_11sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/_54sdp"
                android:layout_height="@dimen/_54sdp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/biometric_fingerprint"
                app:tint="?attr/textAppearanceBodySmall" />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/butConfirm_RegisterBiometricFrag"
            android:layout_below="@+id/frameLayout_imageView_1_RegisterBiometricFrag"
            android:layout_marginTop="@dimen/_11sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:textSize="@dimen/_12sdp"
            android:textColor="?attr/textAppearanceBodySmall"
            android:text="@string/general_continue"
            android:background="@drawable/round_button_principal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/butCancel_RegisterBiometricFrag"
            android:layout_below="@+id/butConfirm_RegisterBiometricFrag"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_11sdp"
            android:textSize="@dimen/_12sdp"
            android:textColor="?attr/textAppearanceBodySmall"
            android:text="@string/general_cancel"
            android:background="@drawable/round_button_secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</FrameLayout>